# imagineer

./: CMakeLists.txt  README.md  imagineer.launch  my_trained_mnist_model.pt  package.xml  setup.py
launch/: roslaunch.launch  startup.launch
msg/: Number.msg
scripts/: ai_service.py
scripts/ai_service/: ai_service.py  number_cruncher.py
src/: camera.cpp  controller.cpp  processor.cpp
src/ai_service/: ai_service.py  main.py  neural_network.py  number_cruncher.py  number_machine.py  service.py  storage.py
src/camera/: camera.cpp  camera.h  image.cpp  image.h  main.cpp
src/controller/: controller.cpp  controller.h  main.cpp  number_and_picture.cpp  number_and_picture.h
src/processor/: main.cpp  processor.cpp  processor.h
srv/: ImageAck.srv
